Refactor Java and Kotlin examples by trimming Dog and Slug