@@ -1,40 +1,31 @@
-//: src/java/src/Generics.java
-package generics;
-
-class Holder<T> {
-  private T value = null;
-  void set(T x) { value = x;}
-  T get() { return value; }
-}
-
-interface Base {
-  void speak();
-}
-
-class Dog implements Base {
-  @Override
-  public void speak() {
-    System.out.println("woof");
-  }
-}
-//---
-class Person implements Base {
-  @Override
-  public void speak() {
-    System.out.println("hello");
-  }
-}
+//: src/kotlin/src/main/kotlin/Generics.java
+// {NewFeature} Preview in JDK 17
+// Compile with javac flags:
+//   --enable-preview --source 17
+import java.util.List;
 
 public class Generics {
+  static <T> T nourish(T x) {
+    // x.consume(); // Nope
+    switch(x) {
+      case Person p -> p.consume();
+      case Robot r -> r.charge();
+      default -> throw new IllegalStateException("Unexpected: " + x);
+    }
+    return x;
+  }
+  static Object nourish2(Object x) {
+    switch(x) {
+      case Person p -> p.consume();
+      case Robot r -> r.charge();
+      default -> throw new IllegalStateException("Unexpected: " + x);
+    }
+    return x;
+  }
+  //---
   public static void main(String... args) {
-    var dogHolder = new Holder<Dog>();
-    dogHolder.set(new Dog());
-    Dog d = dogHolder.get();
-    // dogHolder.set(new Person());  // Nope
-    var baseHolder = new Holder<Base>();
-    baseHolder.set(new Dog());
-    baseHolder.set(new Person());
-    // Person p = baseHolder.get();  // Nope
-    Base b = baseHolder.get();
+    List.of(new Person(), new Robot()).forEach(Generics::nourish);
+    Person p = nourish(new Person());
+    Object p2 = nourish2(new Person());
   }
 }
